--- a/src/styles/background_myroom.css
+++ b/src/styles/background_myroom.css
@@ -21,27 +21,48 @@
 }
 
 .bed {
-  width: 120px;
+  bottom: 100px;
+  left: 30%;
+  width: 150px;
   height: 20px;
-  background-color: #ffc0cb; /* 분홍색 */
+  background-color: #db8f71; /* 분홍색 */
   position: relative;
-  border: 2px solid #ffb6c1; /* 연분홍색 */
+  border: 2px solid #db8f71; /* 연분홍색 */
+  position: absolute;
 }
 
 .bed .bed-head {
   width: 20px;
-  height: 40px;
-  background-color: #ff69b4; /* 진한 분홍색 */
+  height: 50px;
+  background-color: #db8f71; /* 진한 분홍색 */
   position: absolute;
   left: -22px; /* 헤드가 프레임 밖으로 나오도록 조정 */
-  top: -22px; /* 헤드가 프레임 밖으로 나오도록 조정 */
-  border: 2px solid #ff1493; /* 진한 분홍색 */
+  top: -32px; /* 헤드가 프레임 밖으로 나오도록 조정 */
+  border: 2px solid #db8f71; /* 진한 분홍색 */
+}
+.bed .blanket {
+  width: 140px;
+  height: 15px;
+  background-color: #ffc0cb; /* 연핑크색 */
+  position: absolute;
+  top: -12px;
+  left: 5px;
+  border: 1px solid #ffb6c1; /* 연핑크색 */
 }
 
+.bed .pillow {
+  width: 40px;
+  height: 10px;
+  background-color: #f3ffc0; /* 연핑크색 */
+  position: absolute;
+  top: -20px;
+  left: 5px;
+  border: 1px solid #f3ffc0; /* 연핑크색 */
+}
 .wardrobe {
   position: absolute;
   bottom: 100px;
-  left: 20%;
+  left: 10%;
   width: 80px;
   height: 120px;
   background-color: #8b4513; /* 갈색 */
@@ -57,6 +78,69 @@
   height: 45%;
   background-color: #a0522d; /* 황갈색 */
   border: 2px solid #8b4513; /* 어두운 갈색 */
+}
+
+.desk {
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  width: 200px;
+  height: 50px;
+  background-color: #be865d; /* 연한 갈색 */
+  border: 2px solid #be865d; /* 갈색 */
+}
+.laptop {
+  position: absolute;
+  bottom: 150px; /* 책상 상판 위에 위치하도록 설정 */
+  left: calc(60% + 60px); /* 책상 가운데에 위치하도록 조정 */
+  width: 10px;
+  height: 30px;
+  background-color: #333; /* 노트북 본체 색상 */
+  /* 노트북 경계 색상 */
+}
+
+.laptop::before {
+  content: "";
+  position: absolute;
+  top: -30px;
+  left: -35px;
+  width: 80px;
+  height: 50px;
+  background-color: #555; /* 노트북 화면 색상 */
+  border: 2px solid #333; /* 노트북 경계 색상 */
+  /* transform: skewY(-10deg); 평행사변형으로 만들기 위해 기울임
+  transform-origin: bottom left; 변형 기준점 설정 */
+}
+
+.mailbox {
+  position: absolute;
+  bottom: 150px; /* ground에서 떨어진 위치 */
+  right: 10%;
+  width: 70px;
+  height: 60px;
+  background-color: #ff0000; /* 토마토색 */
+  border: 2px solid #b22222; /* 연한 빨간색 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mailbox .lid {
+  width: 30px;
+  height: 5px;
+  background-color: #b22222; /* 연한 빨간색 */
+  position: absolute;
+  top: 12px; /* 가운데에 위치하도록 조정 */
+}
+
+.mailbox .stand {
+  width: 5px;
+  height: 60px;
+  background-color: #ff0000; /* 갈색 */
+  position: absolute;
+  bottom: -55px; /* 상판 아래로 위치하도록 설정 */
+  left: 50%; /* 가운데 정렬 */
+  transform: translateX(-50%); /* 가운데 정렬 */
 }
 
 .cloud {
