--- a/src/styles/background_myroom.css
+++ b/src/styles/background_myroom.css
@@ -23,9 +23,9 @@
 
 .bed {
   bottom: 100px;
-  left: 30%;
-  width: 150px;
-  height: 20px;
+  left: 20%;
+  width: 350px;
+  height: 100px;
   background-color: #db8f71; /* 분홍색 */
   position: relative;
   border: 2px solid #db8f71; /* 연분홍색 */
@@ -33,39 +33,39 @@
 }
 
 .bed .bed-head {
-  width: 20px;
-  height: 50px;
+  width: 70px;
+  height: 170px;
   background-color: #db8f71; /* 진한 분홍색 */
   position: absolute;
   left: -22px; /* 헤드가 프레임 밖으로 나오도록 조정 */
-  top: -32px; /* 헤드가 프레임 밖으로 나오도록 조정 */
+  top: -72px; /* 헤드가 프레임 밖으로 나오도록 조정 */
   border: 2px solid #db8f71; /* 진한 분홍색 */
 }
 .bed .blanket {
-  width: 140px;
-  height: 15px;
+  width: 300px;
+  height: 40px;
   background-color: #ffc0cb; /* 연핑크색 */
   position: absolute;
   top: -12px;
-  left: 5px;
+  left: 50px;
   border: 1px solid #ffb6c1; /* 연핑크색 */
 }
 
 .bed .pillow {
-  width: 40px;
-  height: 10px;
+  width: 70px;
+  height: 30px;
   background-color: #f3ffc0; /* 연핑크색 */
   position: absolute;
-  top: -20px;
-  left: 5px;
+  top: -40px;
+  left: 50px;
   border: 1px solid #f3ffc0; /* 연핑크색 */
 }
 .wardrobe {
   position: absolute;
   bottom: 100px;
-  left: 10%;
-  width: 80px;
-  height: 120px;
+  left: 3%;
+  width: 200px;
+  height: 350px;
   background-color: #8b4513; /* 갈색 */
   border: 4px solid #654321; /* 어두운 갈색 */
   display: flex;
@@ -84,18 +84,18 @@
 .desk {
   position: absolute;
   bottom: 100px;
-  left: 50%;
-  width: 200px;
-  height: 50px;
+  left: 45%;
+  width: 500px;
+  height: 200px;
   background-color: #be865d; /* 연한 갈색 */
   border: 2px solid #be865d; /* 갈색 */
 }
 .laptop {
   position: absolute;
-  bottom: 150px; /* 책상 상판 위에 위치하도록 설정 */
-  left: calc(50% + 60px); /* 책상 가운데에 위치하도록 조정 */
-  width: 10px;
-  height: 30px;
+  bottom: 300px; /* 책상 상판 위에 위치하도록 설정 */
+  left: calc(60% + 60px); /* 책상 가운데에 위치하도록 조정 */
+  width: 30px;
+  height: 50px;
   background-color: #333; /* 노트북 본체 색상 */
   /* 노트북 경계 색상 */
 }
@@ -103,10 +103,10 @@
 .laptop::before {
   content: "";
   position: absolute;
-  top: -30px;
-  left: -35px;
-  width: 80px;
-  height: 50px;
+  top: -150px;
+  left: -110px;
+  width: 250px;
+  height: 150px;
   background-color: #555; /* 노트북 화면 색상 */
   border: 2px solid #333; /* 노트북 경계 색상 */
   /* transform: skewY(-10deg); 평행사변형으로 만들기 위해 기울임
@@ -115,33 +115,54 @@
 
 .mailbox {
   position: absolute;
-  bottom: 150px; /* ground에서 떨어진 위치 */
-  right: 10%;
-  width: 70px;
-  height: 60px;
+  bottom: 300px; /* ground에서 떨어진 위치 */
+  right: 5%;
+  width: 150px;
+  height: 150px;
   background-color: #ff0000; /* 토마토색 */
-  border: 2px solid #b22222; /* 연한 빨간색 */
+  border: 3px solid #b22222; /* 연한 빨간색 */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .mailbox .lid {
-  width: 30px;
-  height: 5px;
+  width: 50px;
+  height: 15px;
   background-color: #b22222; /* 연한 빨간색 */
   position: absolute;
-  top: 12px; /* 가운데에 위치하도록 조정 */
+  top: 19px; /* 가운데에 위치하도록 조정 */
 }
 
 .mailbox .stand {
-  width: 5px;
-  height: 60px;
+  width: 20px;
+  height: 200px;
   background-color: #ff0000; /* 갈색 */
   position: absolute;
-  bottom: -55px; /* 상판 아래로 위치하도록 설정 */
+  bottom: -203px; /* 상판 아래로 위치하도록 설정 */
   left: 50%; /* 가운데 정렬 */
   transform: translateX(-50%); /* 가운데 정렬 */
+}
+
+.bookshelf {
+  position: absolute;
+  bottom: 100px;
+  right: 15%;
+  width: 200px;
+  height: 400px;
+  background-color: #8b4513; /* 갈색 */
+  border: 4px solid #654321; /* 어두운 갈색 */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.bookshelf .shelf {
+  width: 90%;
+  height: 20%;
+  background-color: #a0522d; /* 황갈색 */
+  border: 2px solid #8b4513; /* 어두운 갈색 */
 }
 
 .cloud {
