--- a/src/styles/MyRoomPage.css
+++ b/src/styles/MyRoomPage.css
@@ -1,17 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 .item-button {
-  background-color: #4caf50;
+  /* background-color: #4caf50; */
+  background-color: transparent;
   color: white;
   padding: 15px 20px;
   margin: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
+  font-family: "Press Start 2P", cursive;
   margin-top: 10px;
 }
 
 .item-button:hover {
-  background-color: #45a049;
+  background-color: transparent;
+  color: #4dc1df;
 }
 .plant-image {
   width: 100px; /* 원하는 크기로 조절 */
