--- a/src/styles/ProfileModal.css
+++ b/src/styles/ProfileModal.css
@@ -20,13 +20,21 @@
 }
 
 .profile-button {
+  background: none; /* 배경을 없앰 */
+  border: none; /* 테두리를 없앰 */
+  padding: 0; /* 패딩을 없앰 */
+  cursor: pointer; /* 커서를 포인터로 변경 */
+}
+
+.profile-image {
+  width: 150px; /* 이미지 크기를 설정 */
+  height: 150px; /* 이미지 크기를 설정 */
+  display: block; /* 이미지를 블록 요소로 설정 */
+}
+.left-buttons {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 10px;
-  background: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  top: 30px;
+  left: 30px;
+  display: flex;
+  gap: 15px;
 }
