--- a/src/styles/PartyPage.css
+++ b/src/styles/PartyPage.css
@@ -1,20 +1,25 @@
 .party-page {
+  margin-top: 170px;
   text-align: center;
 }
 
 .kings-container {
   display: flex;
   justify-content: space-around;
-  margin: 20px 0;
+  margin: 0 0;
+  gap: 20px;
 }
 
 .king-card {
-  background-color: #f0f0f0;
-  border-radius: 15px;
   padding: 20px;
-  width: 200px;
+  width: auto;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-family: "Press Start 2P", cursive;
+  color: white;
+  border: 4px solid;
+  border-color: #ffffff; /* 원하는 색상으로 변경하세요 */
+  border-radius: 4px; /* 모서리를 살짝 둥글게 만듭니다 */
+  box-shadow: 0 0 0 4px #000000; /* 픽셀 느낌의 두 번째 테두리를 만듭니다 */
 }
 
 .profile-pic {
@@ -75,7 +80,22 @@
 }
 
 .game-icon {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.back-to-home {
+  font-family: "Press Start 2P", cursive;
+  font-size: 20px;
+}
+
+.send-message-modal {
+  width: 300px; /* 원하는 너비로 조정 */
+  height: 400px; /* 원하는 높이로 조정 */
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  overflow: auto;
 }
