--- a/src/styles/background_signin.css
+++ b/src/styles/background_signin.css
@@ -1,8 +1,49 @@
 .background-signin {
-  background-image: url("../../public/assets/background_signinpage.png");
-  /* 여기에 필요한 다른 스타일을 추가하세요 */
-  background-size: cover;
-  background-position: center;
+  background-color: #c9e999; /* 연두색 배경 설정 */
   width: 100%;
   height: 100vh; /* 또는 필요에 맞게 높이를 설정하세요 */
+  overflow: hidden; /* 요소가 부모 컨테이너를 벗어나지 않도록 설정 */
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.clovers-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.clover {
+  position: absolute;
+  width: 20px; /* 필요에 맞게 크기를 조절하세요 */
+  height: 20px;
+  animation: float 10s linear infinite;
+  opacity: 0;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(-10px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
+}
+
+.clover:nth-child(2n) {
+  animation-duration: 12s;
+}
+
+.clover:nth-child(3n) {
+  animation-duration: 8s;
+}
+
+.clover:nth-child(4n) {
+  animation-duration: 14s;
 }
