--- a/src/styles/ProfileModal.css
+++ b/src/styles/ProfileModal.css
@@ -1,6 +1,7 @@
 /* ProfileModal.css */
+
 .profile-modal {
-  width: 300px;
+  width: 500px;
   margin: auto;
   padding: 20px;
   background: white;
@@ -19,22 +20,39 @@
   justify-content: center;
 }
 
-.profile-button {
-  background: none; /* 배경을 없앰 */
-  border: none; /* 테두리를 없앰 */
-  padding: 0; /* 패딩을 없앰 */
-  cursor: pointer; /* 커서를 포인터로 변경 */
+.profile-modal * {
+  font-family: "Press Start 2P", cursive;
+}
+.profile-modal h2 {
+  margin-top: 0;
 }
 
-.profile-image {
-  width: 150px; /* 이미지 크기를 설정 */
-  height: 150px; /* 이미지 크기를 설정 */
-  display: block; /* 이미지를 블록 요소로 설정 */
+.profile-modal p {
+  margin: 10px 0;
 }
-.left-buttons {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  display: flex;
-  gap: 15px;
+
+.profile-modal label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.profile-modal input {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  font-family: "Press Start 2P", cursive;
+}
+
+.profile-modal button {
+  margin-right: 10px;
+  padding: 10px 20px;
+  font-family: "Press Start 2P", cursive;
+  background: none;
+  border: 2px solid #ccc;
+  color: #808080; /* Grey text color */
+  cursor: pointer;
+}
+
+.profile-modal button:hover {
+  border-color: #999;
 }
